playbook-lora-all-in-one-gateway-basic-install/playbook/roles/pre_esf_linux_setup/files/firewall/addon-iptables
# Generated by iptables-save v1.6.2 on Mon May 24 19:19:05 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o chirpbridge -j MASQUERADE
-A POSTROUTING -s 172.18.0.4/32 -d 172.18.0.4/32 -p udp -m udp --dport 1700 -j MASQUERADE
-A POSTROUTING -s 172.18.0.6/32 -d 172.18.0.6/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i chirpbridge -j RETURN
-A DOCKER ! -i chirpbridge -p udp -m udp --dport 1700 -j DNAT --to-destination 172.18.0.4:1700
-A DOCKER ! -i chirpbridge -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.18.0.6:8080
COMMIT
# Completed on Mon May 24 19:19:05 2021
# Generated by iptables-save v1.6.2 on Mon May 24 19:19:05 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o chirpbridge -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o chirpbridge -j DOCKER
-A FORWARD -i chirpbridge ! -o chirpbridge -j ACCEPT
-A FORWARD -i chirpbridge -o chirpbridge -j ACCEPT
-A DOCKER -d 172.18.0.4/32 ! -i chirpbridge -o chirpbridge -p udp -m udp --dport 1700 -j ACCEPT
-A DOCKER -d 172.18.0.6/32 ! -i chirpbridge -o chirpbridge -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i chirpbridge ! -o chirpbridge -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o chirpbridge -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon May 24 19:19:05 2021
